Bug 1601624 - Don't suppress shrink-to-fit resize reflows on unchanged size. r=tnikkel

As the width and height arguments to ResizeReflow are treated as constraints,
not the final size, in that case.

Differential Revision: https://phabricator.services.mozilla.com/D56108